--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.0.16",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
+    "mesh-gradient.js": "^0.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0"
